--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ rocket_codegen = "0.3.3"
 redis = "0.8.0"
 r2d2 = "*"
 r2d2_redis = "*"
+rand = "*"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
